--- a/package.json
+++ b/package.json
@@ -2,18 +2,25 @@
   "name": "nodejs-challenge",
   "version": "1.0.0",
   "description": "MRP NodeJS Coding Challenge",
-  "main": "src/index.js",
-  "type": "module",
+  "main": "index.js",
+ 
   "scripts": {
-    "data": "node ./bin/generate-data.js",
-    "start": "node ./src/index.js"
+    "dev": "nodemon src/index.ts",
+    "start": "node dist/index.js",
+    "build": "tsc -p"
   },
   "author": "Cody Mercer <cmercer@mrpfd.com>",
   "license": "UNLICENSED",
   "dependencies": {
-    "express": "^4.17.1"
+    "@types/body-parser": "^1.19.0",
+    "@types/express": "^4.17.11",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "prettier": "^2.2.1"
   },
   "devDependencies": {
+    "nodemon": "^2.0.7",
+    "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   }
 }
