--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "MRP NodeJS Coding Challenge",
   "main": "index.js",
- 
   "scripts": {
     "dev": "nodemon src/index.ts",
     "start": "node dist/index.js",
@@ -16,9 +15,11 @@
     "@types/express": "^4.17.11",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/uuid": "^8.3.0",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
