fixed a few errors

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Cody Mercer <cmercer@mrpfd.com>",
   "license": "UNLICENSED",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "@types/body-parser": "^1.19.0",
     "@types/express": "^4.17.11",
     "body-parser": "^1.19.0",
