--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "prettier": "^2.2.1",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@types/uuid": "^8.3.0",
