--- a/package.json
+++ b/package.json
@@ -17,12 +17,17 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "prettier": "^2.2.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "uuid": "^8.3.2",
     "yup": "^0.32.9"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.13.0",
     "@types/uuid": "^8.3.0",
     "nodemon": "^2.0.7",
+    "source-map-loader": "^2.0.1",
+    "ts-loader": "^8.1.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   }
